--- a/source/scss/something-about-css.scss
+++ b/source/scss/something-about-css.scss
@@ -482,151 +482,52 @@
   &.demo-7 {
     position: relative;
     background-color: #fff;
-    height: 0;
-    width: 0;
-    border: solid #eee;
-    border-top-width: 2rem;
-    border-bottom-width: 2rem;
-    border-left-width: 1.5rem;
-    border-right-width: 1.5rem;
-    border-right-color: transparent;
-    border-left-color: transparent;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    transform-origin: center;
+    height: 50px;
+    width: 36px;
+    border-top: 2px solid gray;
+    border-bottom: 2px solid gray;
     animation: border-demo-7 3.2s infinite ease-out;
 
     &::before {
       position: absolute;
-      top: -2rem;
-      left: -1.5rem;
+      top: -1px;
+      left: 3px;
       content: "";
-      width: 0;
-      height: 0;
-      border: solid gray;
-      border-top-width: 2rem;
-      border-bottom-width: 2rem;
-      border-left-width: 1.5rem;
-      border-right-width: 1.5rem;
-      border-right-color: transparent;
-      border-left-color: transparent;
-      border-bottom-color: transparent;
-      transform-origin: right center;
-      animation: demo-7-before 3.2s infinite ease-out;
-
-      @keyframes demo-7-before {
-        0% {
-          border: solid transparent;
-          border-top-width: 2rem;
-          border-bottom-width: 2rem;
-          border-left-width: 1.5rem;
-          border-right-width: 1.5rem;
-          border-right-color: transparent;
-          border-left-color: transparent;
-          border-bottom-color: transparent;
-          border-top-left-radius: 3px;
-          border-top-right-radius: 3px;
-        }
-        50% {
-          border: solid gray;
-          border-top-width: 2rem;
-          border-bottom-width: 2rem;
-          border-left-width: 1.5rem;
-          border-right-width: 1.5rem;
-          border-right-color: transparent;
-          border-left-color: transparent;
-          border-bottom-color: transparent;
-          border-top-left-radius: 3px;
-          border-top-right-radius: 3px;
-        }
-        100% {
-          border: solid transparent;
-          border-top-width: 2rem;
-          border-bottom-width: 2rem;
-          border-left-width: 1.5rem;
-          border-right-width: 1.5rem;
-          border-right-color: transparent;
-          border-left-color: transparent;
-          border-bottom-color: transparent;
-          border-top-left-radius: 3px;
-          border-top-right-radius: 3px;
-        }
-      }
+      width: 26px;
+      height: 23px;
+      border-width: 0 2px 1px 2px;
+      border-style: solid;
+      border-color: gray;
+      border-radius: 0 0 100% 100% / 0 0 180% 180%;
     }
 
     &::after {
       position: absolute;
-      bottom: -2rem;
-      right: -1.5rem;
+      bottom: -1px;
+      left: 3px;
       content: "";
-      width: 0;
-      height: 0;
-      border:solid gray;
-      border-top-width: 2rem;
-      border-bottom-width: 2rem;
-      border-left-width: 1.5rem;
-      border-right-width: 1.5rem;
-      border-right-color: transparent;
-      border-left-color: transparent;
-      border-top-color: transparent;
-      border-bottom-left-radius: 3px;
-      border-bottom-right-radius: 3px;
-      animation: demo-7-after 3.2s infinite ease-out;
-
-      @keyframes demo-7-after {
-        0% {
-          border: solid gray;
-          border-top-width: 2rem;
-          border-bottom-width: 2rem;
-          border-left-width: 1.5rem;
-          border-right-width: 1.5rem;
-          border-right-color: transparent;
-          border-left-color: transparent;
-          border-top-color: transparent;
-          border-bottom-left-radius: 3px;
-          border-bottom-right-radius: 3px;
-        }
-        50% {
-          border: solid transparent;
-          border-top-width: 2rem;
-          border-bottom-width: 2rem;
-          border-left-width: 1.5rem;
-          border-right-width: 1.5rem;
-          border-right-color: transparent;
-          border-left-color: transparent;
-          border-top-color: transparent;
-          border-bottom-left-radius: 3px;
-          border-bottom-right-radius: 3px;
-        }
-        100% {
-          border: solid gray;
-          border-top-width: 2rem;
-          border-bottom-width: 2rem;
-          border-left-width: 1.5rem;
-          border-right-width: 1.5rem;
-          border-right-color: transparent;
-          border-left-color: transparent;
-          border-top-color: transparent;
-          border-bottom-left-radius: 3px;
-          border-bottom-right-radius: 3px;
-        }
-      }
+      width: 26px;
+      height: 23px;
+      border-width: 1px 2px 0 2px;
+      border-style: solid;
+      border-color: gray;
+      border-radius: 100% 100% 0 0 / 180% 180% 0 0;
     }
 
     @keyframes border-demo-7 {
       0% {
         transform: rotate(0deg);
       }
-      45% {
+      35% {
         transform: rotate(181deg);
       }
-      50% {
+      40%, 50% {
         transform: rotate(180deg);
       }
-      95% {
+      85% {
         transform: rotate(361deg);
       }
-      100% {
+      90%, 100% {
         transform: rotate(360deg);
       }
     }
